--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,11 +2,17 @@
   "name": "burgerconf",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "scss/section/_team.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    }
+  ],
   "fileTree": {
     "expandedDirs": [
       "scss",
-      "scss/section"
+      "scss/section",
+      "scss/config"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -26,12 +32,17 @@
       "imports": [
         "scss/config/_variables.scss",
         "scss/config/_mixins.scss",
+        "scss/config/_media.scss",
         "scss/layout/_fonts.scss",
         "scss/layout/_base.scss",
         "scss/layout/_adjustment.scss",
         "scss/section/_hero.scss",
         "scss/section/_best.scss",
-        "scss/section/_review.scss"
+        "scss/section/_review.scss",
+        "scss/section/_team.scss",
+        "scss/section/_contacts.scss",
+        "scss/section/_order.scss",
+        "scss/section/_menu.scss"
       ]
     }
   ],
