--- a/prepros-6.config
+++ b/prepros-6.config
@@ -42,7 +42,8 @@
         "scss/section/_team.scss",
         "scss/section/_contacts.scss",
         "scss/section/_order.scss",
-        "scss/section/_menu.scss"
+        "scss/section/_menu.scss",
+        "scss/section/_burgers.scss"
       ]
     }
   ],
